# pycggtts

./: README.md  pyproject.toml
data/dual/: EZUG0060.600  GZUG0060.600
data/raw/: CTTS_GAL_30s_E1
pycggtts/: __init__.py  cggtts.py  code.py  delay.py  receiver.py  reftime.py  version.py
pycggtts/track/: __init__.py  track.py
tests/: test_delay.py  test_parse.py  test_reftime.py
