[tool.poetry]
name = "pycggtts"
version = "0.1.2"
description = "Remote clock comparison using CGGTTS in Python"
authors = ["Víctor Vázquez <victorvazrod@gmail.com>"]
license = "LGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
hifitime = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.13.0"
pytest = "^8.3.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
